# DecimalTime

./: LICENSE.md  README.md  decimal_time.md  pyproject.toml  web_index.html
.github/workflows/: ci.yml
decimal_time/: __init__.py  calendar.py  cli.py  convert.py  planet_profile.py
lib_deci_time/: deci_time.py  test_deci_time.py
lib_deci_time/examples/: README.md  ex01_basic_usage.py  ex02_math_and_conversion.py  ex03_custom_planets.py
tests/: test_decimal_time.py
