# File: pyproject.toml
[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decimal_time"
version = "1.0.0"
description = "Reference implementation for Decimal Time and DSC Calendar"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]

[project.scripts]
decimal-time = "decimal_time.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
